<resources>
    <string name="app_name">BeepPeep</string>
    <string name="Details_title">Lets take a look at our stats</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="Latitude_label">Lat</string>
    <string name="Latitude_value">[latitude]</string>
    <string name="Longitude_label">Lon</string>
    <string name="Longitude_value">[longitude]</string>
    <string name="Speed_label">Speed</string>
    <string name="Power_label">Power</string>
    <string name="title_activity_maps">Beep Peep Tracker</string>
    <string name="action_settings">Refresh</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_history">History</string>
</resources>
