<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp" >

    <TextView
        android:layout_width="335dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="14dp"
        android:layout_marginTop="140dp"
        android:gravity="center"
        android:text="@string/Details_title"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/id_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="51dp"
        android:layout_marginTop="236dp"
        android:layout_marginLeft="150dp"
        android:text="@string/Latitude_label" />

    <TextView
        android:id="@+id/content_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/id_label"
        android:layout_marginTop="260dp"
        android:text="@string/Longitude_label" />

    <TextView
        android:id="@+id/id_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/id_label"
        android:layout_marginEnd="165dp"
        android:layout_marginRight="10dp"
        android:text="@string/Latitude_value" />

    <TextView
        android:id="@+id/content_value"
        android:text="@string/Longitude_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/content_label"
        android:layout_alignLeft="@+id/id_value" />


    <Button
        android:id="@+id/mapButton"
        android:layout_width="123dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="125dp"
        android:background="@android:color/holo_blue_dark"
        android:text="Button"
        tools:text="Show in Maps" />
</RelativeLayout>